[project]
name = "aio-kavenegar"
version =  "2.0.2"
description  = "AsyncIO compatible Kavenegar Python library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.23.0"]
authors = [{ name = "Alireza Jafari", email = "alirezaja1384@gmail.com" }]
urls = { "Homepage" = "https://github.com/alirezaja1384/aio-kavenegar" }
keywords = ["kavenegar", "sms", "asyncio"]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Telephony"
]

[tool.setuptools]
packages = ["aio_kavenegar"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
